// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
    provider = "prisma-client-js"
}

datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

generator tsed {
    provider = "tsed-prisma"
    output   = "../prisma/generated/tsed"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
    id           Int            @id @default(autoincrement())
    updatedAt    DateTime       @default(now()) @updatedAt
    createdAt    DateTime       @default(now())
    // ------
    /// @TsED.Email()
    /// @TsED.Description("Email of the user")
    email        String         @unique
    username     String         @unique
    password     String
    Todo         Todo[]
    Event        Event[]
    TodoCategory TodoCategory[]
}

model Todo {
    id           Int          @id @default(autoincrement())
    updatedAt    DateTime     @default(now()) @updatedAt
    createdAt    DateTime     @default(now())
    // ------
    uuid         String       @unique
    title        String
    completed    Boolean      @default(false)
    LinkedEvents Event[]
    Category     TodoCategory @relation(fields: [categoryId], references: [id])
    categoryId   Int
    order        Int? // Order in the list
    // ------
    User         User         @relation(fields: [userId], references: [id])
    userId       Int
    // Event        Event?       @relation(fields: [eventId], references: [id])
    // eventId      Int?
}

model TodoCategory {
    id        Int      @id @default(autoincrement())
    updatedAt DateTime @default(now()) @updatedAt
    createdAt DateTime @default(now())
    // ------
    uuid      String   @unique
    name      String
    User      User     @relation(fields: [userId], references: [id])
    userId    Int
    Todo      Todo[]
}

model Event {
    id          Int      @id @default(autoincrement())
    updatedAt   DateTime @default(now()) @updatedAt
    createdAt   DateTime @default(now())
    // ------
    uuid        String   @unique
    title       String
    description String?
    start       DateTime
    end         DateTime
    allDay      Boolean  @default(false)
    completed   Boolean  @default(false)
    LinkedTodos Todo[]
    // ------
    User        User     @relation(fields: [userId], references: [id])
    userId      Int
    //    Todo        Todo?    @relation(fields: [todoId], references: [id])
    //    todoId      Int?
}
